changing git address

--- a/pom.xml
+++ b/pom.xml
@@ -206,11 +206,17 @@
     </dependencies>
   </dependencyManagement>
 
-  <scm>
+  <!--scm>
     <connection>scm:git:git@github.com:jleetutorial/maven-project.git</connection>
     <developerConnection>scm:git:git@github.com:jleetutorial/maven-project.git</developerConnection>
     <tag>HEAD</tag>
     <url>http://github.com/jleetutorial/maven-project</url>
+  </scm>
+  <scm-->
+    <connection>scm:git:git@github.com:ashishrpandey/maven-project.git</connection>
+    <developerConnection>scm:git:git@github.com:ashishrpandey/maven-project.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://github.com/ashishrpandey/maven-project</url>
   </scm>
 
   <prerequisites>
